# openclaw-screensaver

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html
