[package]
name = "openclaw-activity-screen"
version = "0.1.0"
description = "OpenClaw public activity display"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pem", "pkcs8", "rand_core"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0", features = ["protocol-asset"] }
